Fix header spacing

--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,10 @@
-body{
-  padding-top:70px;
-}
 /* fix padding under menu after resize */
 @media screen and (max-width: 767px) {
-  body { padding-top: 60px; }
+  body { padding-top: 80px; }
 }
 @media screen and (min-width:768px) and (max-width: 991px) {
-  body { padding-top: 110px; }
+  body { padding-top: 130px; }
 }
 @media screen and (min-width: 992px) {
-  body { padding-top: 60px; }
+  body { padding-top: 80px; }
 }
